--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.0",
     "react-router": "^7.6.3",
+    "react-select": "^5.10.1",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
